# Physics-graphing

./: Cargo.toml  README.md  info  physics.py
MacOSX/: info  libphysics.dylib  physics.py
src/: lib.rs  utill.rs
